// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LI /> > should render 1`] = `
<li
  data-astro-cid-7jajnglq=""
  style=";--bodyFontFamily: "IBM Plex Sans", Trebuchet MS;--bodyFontSize: 1.25rem;--bodyFontWeight: 400;--bodyLineHeight: 1.5;--colorsForestGreen: rgb(22, 62, 53);--sizes05: 0.5rem;--sizes125: 1.25rem;"
>
   List item 
</li>
`;

exports[`<LI /> > should render heavy 1`] = `
<li
  data-astro-cid-7jajnglq=""
  style="font-weight:900;--bodyFontFamily: "IBM Plex Sans", Trebuchet MS;--bodyFontSize: 1.25rem;--bodyFontWeight: 400;--bodyLineHeight: 1.5;--colorsForestGreen: rgb(22, 62, 53);--sizes05: 0.5rem;--sizes125: 1.25rem;"
>
   List item 
</li>
`;
